--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,10 +42,13 @@ jobs:
 
       - name: Build
         run: |
-          dotnet build ${{ env.SOLUTION_PATH }} \
-            --configuration Release \
-            --no-restore \
-            /p:Version=${{ env.VERSION }}
+            dotnet pack "${PROJECT_PATH}" \
+              --configuration Release \
+              --no-restore \
+              -p:Version="${VERSION}" \
+              -p:AssemblyVersion="${VERSION}" \
+              -p:FileVersion="${VERSION}" \
+              -p:InformationalVersion="${VERSION}"
 
       - name: Test
         run: dotnet test ${{ env.SOLUTION_PATH }} --configuration Release --no-build
@@ -90,25 +93,12 @@ jobs:
         run: |
           dotnet nuget push "./nugetPackage/**/*.nupkg" \
             --api-key "${{ secrets.GH_KAMIYOMU_GITHUB_PACKAGE_PUBLISHER }}" \
-            --source github
+            --source github \
+            --skip-duplicate
 
       - name: Push package to NuGet.org
         run: |
           dotnet nuget push "./nugetPackage/**/*.nupkg" \
             --api-key "${{ secrets.GH_KAMIYOMU_NUGETORG_PACKAGE_PUBLISHER }}" \
-            --source "https://api.nuget.org/v3/index.json"
-
-
-  tag:
-    name: Create git tag
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Create tag
-        uses: rickstaa/action-create-tag@v1
-        with:
-          tag: "v${{ needs.build.outputs.version }}"
-          message: "v${{ needs.build.outputs.version }}"
+            --source "https://api.nuget.org/v3/index.json" \
+            --skip-duplicate
