add abstract input, order, required field, adjust release to include pre-release and release versions

--- a/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.csproj
+++ b/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.csproj
@@ -32,4 +32,5 @@
 	  <None Update="Resources\logo.png" Pack="true" PackagePath="Resources/logo.png">
 	  </None>
 	</ItemGroup>
+	<Import Project="KamiYomu.CrawlerAgents.Core.props"/>
 </Project>
