--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,14 +28,41 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Extract version from branch name
+      - name: Extract version and suffix from branch
         id: extract_version
         run: |
-          branch="${GITHUB_REF#refs/heads/}"
-          version="${branch#releases/}"
-          echo "version=$version" >> $GITHUB_OUTPUT
-          echo "VERSION=$version" >> $GITHUB_ENV
-          echo "Version: $version"
+          BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          RAW_VERSION="${BRANCH_NAME#releases/}"
+
+          if [[ "$RAW_VERSION" == *"-"* ]]; then
+            VERSION_BASE="${RAW_VERSION%%-*}"
+            VERSION_SUFFIX="-${RAW_VERSION#*-}"
+            IS_PRERELEASE=true
+          else
+            VERSION_BASE="$RAW_VERSION"
+            VERSION_SUFFIX=""
+            IS_PRERELEASE=false
+          fi
+
+          if [[ ! "$VERSION_BASE" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Invalid VERSION_BASE format: '$VERSION_BASE'"
+            exit 1
+          fi
+
+          TAG="${VERSION_BASE}${VERSION_SUFFIX}"
+
+          echo "VERSION=${VERSION_BASE}" >> $GITHUB_ENV
+          echo "VERSION_SUFFIX=${VERSION_SUFFIX}" >> $GITHUB_ENV
+          echo "IS_PRERELEASE=${IS_PRERELEASE}" >> $GITHUB_ENV
+          echo "TAG=${TAG}" >> $GITHUB_ENV
+
+      - name: Set outputs
+        id: set_outputs
+        run: |
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+          echo "version_suffix=${VERSION_SUFFIX}" >> $GITHUB_OUTPUT
+          echo "is_prerelease=${IS_PRERELEASE}" >> $GITHUB_OUTPUT
+          echo "tag=${TAG}" >> $GITHUB_OUTPUT
 
       - name: Restore
         run: dotnet restore ${{ env.SOLUTION_PATH }} --configfile ${{ env.NUGET_CONFIG_PATH }}
@@ -45,10 +72,8 @@ jobs:
             dotnet pack "${PROJECT_PATH}" \
               --configuration Release \
               --no-restore \
-              -p:Version="${VERSION}" \
-              -p:AssemblyVersion="${VERSION}" \
-              -p:FileVersion="${VERSION}" \
-              -p:InformationalVersion="${VERSION}"
+              -p:VersionSuffix="${{ env.VERSION_SUFFIX}}" \
+              -p:Version="${{ env.VERSION }}"
 
       - name: Test
         run: dotnet test ${{ env.SOLUTION_PATH }} --configuration Release --no-build
@@ -58,7 +83,7 @@ jobs:
           dotnet pack ${{ env.PROJECT_PATH }} \
             --configuration Release \
             --output ./nupkg \
-            /p:PackageVersion=${{ env.VERSION }}
+            /p:PackageVersion=${{ env.TAG }}
 
       - name: Upload NuGet artifact
         uses: actions/upload-artifact@v4
@@ -71,6 +96,10 @@ jobs:
     name: Publish to GitHub + NuGet.org
     runs-on: ubuntu-latest
     needs: build
+    env:
+      VERSION: ${{ needs.build.outputs.version }}
+      TAG: ${{ needs.build.outputs.tag }}
+      IS_PRERELEASE: ${{ needs.build.outputs.is_prerelease }}
 
     steps:
       - name: Download nuget package artifact
@@ -97,6 +126,7 @@ jobs:
             --skip-duplicate
 
       - name: Push package to NuGet.org
+        if: ${{ env.IS_PRERELEASE == 'false' }}
         run: |
           dotnet nuget push "./nugetPackage/**/*.nupkg" \
             --api-key "${{ secrets.GH_KAMIYOMU_NUGETORG_PACKAGE_PUBLISHER }}" \
