add package tags

--- a/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.Build.props
+++ b/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.Build.props
@@ -2,4 +2,7 @@
 	<PropertyGroup>
 		<PackageType>Analyzer;KamiYomuCrawlerAgent</PackageType>
 	</PropertyGroup>
+	<PropertyGroup>
+		<PackageTags>crawler-agents;manga-download;mangadex</PackageTags>
+	</PropertyGroup>
 </Project>
