--- a/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.csproj
+++ b/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.csproj
@@ -3,25 +3,31 @@
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<LangVersion>13</LangVersion>
+	</PropertyGroup>
+	
+	<PropertyGroup>
 		<Title>KamiYomu Crawler Agent Core</Title>
 		<Description>A foundational library for building, extending, and integrating custom crawler agents within the KamiYomu ecosystem. Provides essential abstractions, utilities, and lifecycle hooks to streamline agent development and ensure seamless interoperability across the platform.</Description>
-		<Copyright>© KamiYomu. Licensed under GPL-3.0.</Copyright>
-		<PackageProjectUrl>https://github.com/KamiYomu/KamiYomu.CrawlerAgents.Core</PackageProjectUrl>
-		<PackageIcon>Resources/logo.png</PackageIcon>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<Authors>KamiYomu</Authors>
+		<Owners>KamiYomu</Owners>
+		<PackageProjectUrl>https://github.com/KamiYomu/KamiYomu.CrawlerAgents.Core</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/KamiYomu/KamiYomu.CrawlerAgents.Core</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageTags>kamiyomu;crawler agents;manga download</PackageTags>
+		<PackageTags>kamiyomu;crawler-core;manga-download</PackageTags>
+		<PackageType>Analyzer;KamiYomuCrawlerCoreAgent</PackageType>
+		<PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+		<Copyright>© KamiYomu. Licensed under GPL-3.0.</Copyright>
+		<PackageIconUrl>https://raw.githubusercontent.com/KamiYomu/KamiYomu.CrawlerAgents.Core/main/src/KamiYomu.CrawlerAgents.Core/Resources/logo.png</PackageIconUrl>
+		<PackageIcon>Resources/logo.png</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
-
+	
 	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<IncludeSymbols>True</IncludeSymbols>
+		<IncludeSource>True</IncludeSource>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
@@ -29,8 +35,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Include="KamiYomu.CrawlerAgents.Core.Build.props" Pack="true" PackagePath="build/" />
-	  <None Include="Resources\logo.png" Pack="true" PackagePath="Resources/" />
+		<None Include="Resources\logo.png" Pack="true" PackagePath="Resources/" />
+		<None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="/" />
 	</ItemGroup>
+	
 	<Import Project="KamiYomu.CrawlerAgents.Core.props" />
 </Project>
