remove mangadex tag

--- a/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.Build.props
+++ b/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.Build.props
@@ -3,6 +3,6 @@
 		<PackageType>Analyzer;KamiYomuCrawlerAgent</PackageType>
 	</PropertyGroup>
 	<PropertyGroup>
-		<PackageTags>crawler-agents;manga-download;mangadex</PackageTags>
+		<PackageTags>crawler-agents;manga-download</PackageTags>
 	</PropertyGroup>
 </Project>
