add tests cases

--- a/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.csproj
+++ b/src/KamiYomu.CrawlerAgents.Core/KamiYomu.CrawlerAgents.Core.csproj
@@ -13,8 +13,7 @@
 		<PackageProjectUrl>https://github.com/KamiYomu/KamiYomu.CrawlerAgents.Core</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/KamiYomu/KamiYomu.CrawlerAgents.Core</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageTags>kamiyomu;crawler-core;manga-download</PackageTags>
-		<PackageType>Analyzer;KamiYomuCrawlerCoreAgent</PackageType>
+		<PackageTags>kamiyomu;kamiyomu-crawler-core;manga-download</PackageTags>
 		<PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
 		<Copyright>© KamiYomu. Licensed under GPL-3.0.</Copyright>
 		<PackageIconUrl>https://raw.githubusercontent.com/KamiYomu/KamiYomu.CrawlerAgents.Core/main/src/KamiYomu.CrawlerAgents.Core/Resources/logo.png</PackageIconUrl>
